Fixed some spacing and Facebook button

--- a/app/stylesheets/_logged_out_header.css.sass
+++ b/app/stylesheets/_logged_out_header.css.sass
@@ -117,5 +117,5 @@
       color: #b7403c
       font-size: 13px
     .facebook
-      padding-top: 3px
+      padding-top: 1px
       float: right
